Fix button background 'bleed' when using border-radius.

--- a/style/styles.css
+++ b/style/styles.css
@@ -398,6 +398,7 @@ ul {
   font-size: 26px;
   text-align: center;
   box-shadow: 0px 6px 0px #6f3f9e, 0 12px 15px -5px #a55deb;
+  background-clip: padding-box;
 }
 .button-action:hover {
   background-image: linear-gradient(45deg, #9254d1 0%, #cd54d1 100%);
@@ -802,6 +803,7 @@ Responsive
     background: linear-gradient(45deg, #a55deb 0%, #e75deb 100%);
     font-size: 19px;
     box-shadow: 0px 6px 0px #6f3f9e, 0 12px 15px -5px #a55deb;
+    background-clip: padding-box;
   }
 
   .button-border {
